samples/_failures_safe/1761271866_7654d3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_830b0537.c: In function ‘main’:
./samples/SAFE/__tmp_830b0537.c:160:17: error: expected expression at end of input
  160 |                 if (
      |                 ^~
./samples/SAFE/__tmp_830b0537.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_830b0537.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_830b0537.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_830b0537.c:160:17: error: expected declaration or statement at end of input
